@@ -18,4 +18,5 @@ Bug fixes:
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Moved jscalendar lang/ subdir to calendar-lang/ to avoid name collisions.
-- moved BasicWidget.renderHtmlTag to CPSUtil.html
+- Moved BasicWidget.renderHtmlTag to CPSUtil.html
+- Removed deprecated _isinstance use.
